--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">NexusTimer</string>
+    <string name="off_timer_title">オフタイマー</string>
     <string name="dialog_title">このタイマーを削除します</string>
     <string name="dialog_description">削除したタイマーは元に戻せません</string>
     <string name="dialog_ok_title">はい</string>
